--- a/about.css
+++ b/about.css
@@ -12,7 +12,7 @@
     display: flex;
     align-items: center; 
     justify-content: center;     
-    gap: 50px;
+    gap: 30px;
 }
 
 .text-container h1{
@@ -20,7 +20,7 @@
 }
 .text-container p{
     text-align: justify;
-    padding: 20px;
+    padding: 10px;
     line-height: 25px;
     color: #fff;
 }
@@ -221,6 +221,11 @@
 
 /* Responsive Design */
 @media (max-width: 768px) {
+    .image-container img {
+        width: 200px; 
+        height: auto;
+        
+    }
     #about > div {
         flex-direction: column;
         align-items: center;
