--- a/contact.css
+++ b/contact.css
@@ -33,7 +33,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    gap: 50px;     
+    gap: 20px;     
     margin: 0 auto; 
     padding: 20px;
 }
@@ -141,7 +141,7 @@ textarea {
 button {
     width: 100%;
     padding: 10px;
-    background-color: maroon;
+    background-color: brown;
     color: white;
     border: none;
     border-radius: 15px;
@@ -201,6 +201,7 @@ button:hover {
     .contactW {
         flex-direction: column;
         align-items: center;
+        gap: 0;
     }
     .contactW p {
       justify-content: center;
