--- a/myWork.css
+++ b/myWork.css
@@ -108,7 +108,7 @@ p {
 }
 
 #bttn {
-    background-color: maroon; 
+    background-color: brown; 
     color: white;
     border: none;
     padding: 10px;
@@ -124,7 +124,7 @@ p {
     width: 30%;
 }
 
-#btn img {
+#bttn img {
     width: 20px; 
     height: 20px;
 }
@@ -136,6 +136,7 @@ p {
 
 #bttn:active {
     transform: scale(0.95);
+    
 }
 
 /* Responsive Styling */
@@ -160,8 +161,8 @@ p {
     }
     .projects {
         width: 80%; /* Adjust width for small screens */
-        margin-bottom: 20px; /* Add margin between project items */
-        height: auto; /* Allow height to adjust */
+        margin-bottom: 20px; 
+        height: auto; 
     }
 }
 
@@ -174,7 +175,7 @@ p {
         height: 120px; 
     }
     .bttn{
-        width:100%;
+        width:50%;
         padding:0;
     }
 }
